fix: tests used immutablecollections which do not support null